finished elements added reset button

--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
         <div id="sq7"></div>
         <div id="sq8"></div>
     </section>    
+   <h3><button id="resetButton">Reset</button></h3>
 </body>
+
 </html>
