--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/gh/mathusummut/confetti.js/confetti.min.js"></script>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+  />
     <script defer src="js/main.js"></script>
     <title>Tic Tac Toe</title>
 
 </head>
-<body>
+<body style="background-color: darkgray;">
+    <br> <br> <br>
     <h1>Tic-Tac-Toe</h1>
     <h2 id="message">Message</h2>
-
     <section class="board">
         <div id="sq0"></div>
         <div id="sq1"></div>
@@ -23,8 +30,8 @@
         <div id="sq6"></div>
         <div id="sq7"></div>
         <div id="sq8"></div>
-    </section>    
-   <h3><button id="resetButton">Reset</button></h3>
+    </section>    <br> 
+   <h3><button type="button" class= "btn btn-info" id="resetButton">Reset</button></h3>
 </body>
 
 </html>
