--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Rowdies:wght@300&display=swap">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/gh/mathusummut/confetti.js/confetti.min.js"></script>
     <link
@@ -32,6 +32,8 @@
         <div id="sq8"></div>
     </section>    <br> 
    <h3><button type="button" class= "btn btn-info" id="resetButton">Reset</button></h3>
+   <h3>Rules</h3>
+   <h5>Player One is Purple, Player Two is Yellow <br> The first player with 3 boxes in a row vertically, horizontally, or diagonally wins.</h6>
 </body>
 
 </html>
