--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>    <br> 
    <h3><button type="button" class= "btn btn-info" id="resetButton">Reset</button></h3>
    <h3>Rules</h3>
-   <h5>Player One is Purple, Player Two is Yellow <br> The first player with 3 boxes in a row vertically, horizontally, or diagonally wins.</h6>
+   <h5>Player One is Purple, Player Two is Yellow <br> The first player with 3 boxes in a row vertically, horizontally, or diagonally wins.<br> If all boxes have been filled and neither player has 3 boxes in a row, the game ends in a tie.</h6>
 </body>
 
 </html>
